--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
         <div class="product">
             <h2>$5 - Basic Package</h2>
             <p>Includes some games and access to 2 public proxy websites.</p>
-            <button class="btn" onclick="openForm('$5 - Basic Package')">Buy Now</button>
+            <button class="btn" onclick="openForm('$5 - Tier 1 Basic')">Buy Now</button>
         </div>
         <div class="product">
             <h2>$10 - Standard Package</h2>
             <p>Includes games and access to The Underground (proxy vault).</p>
-            <button class="btn" onclick="openForm('$10 - Standard Package')">Buy Now</button>
+            <button class="btn" onclick="openForm('$10 - Tier 2 Standard ')">Buy Now</button>
         </div>
         <div class="product">
             <h2>$20 - Premium Package</h2>
             <p>Includes everything: many games, The Underground, bypass methods, tutorials, and future content.</p>
-            <button class="btn" onclick="openForm('$20 - Premium Package')">Buy Now</button>
+            <button class="btn" onclick="openForm('$20 - Tier 3 Premium')">Buy Now</button>
         </div>
     </div>
     
