--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     <div class="container hidden" id="store">
         <h1>The Abyss Store</h1>
         <div class="product">
-            <h2>$5 - Basic Package</h2>
+            <h2>$5 - Tier 1 Basic</h2>
             <p>Includes some games and access to 2 public proxy websites.</p>
             <button class="btn" onclick="openForm('$5 - Tier 1 Basic')">Buy Now</button>
         </div>
         <div class="product">
-            <h2>$10 - Standard Package</h2>
+            <h2>$10 - Tier 2 Standard</h2>
             <p>Includes games and access to The Underground (proxy vault).</p>
             <button class="btn" onclick="openForm('$10 - Tier 2 Standard ')">Buy Now</button>
         </div>
         <div class="product">
-            <h2>$20 - Premium Package</h2>
+            <h2>$20 - Tier 3 Premium</h2>
             <p>Includes everything: many games, The Underground, bypass methods, tutorials, and future content.</p>
             <button class="btn" onclick="openForm('$20 - Tier 3 Premium')">Buy Now</button>
         </div>
