--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1>The Abyss Store</h1>
         <div class="product">
             <h2>$5 - Tier 1 Basic</h2>
-            <p>Includes some games and access to 2 public proxy websites.</p>
+            <p>Includes some games and access to 2 proxy websites.</p>
             <button class="btn" onclick="openForm('$5 - Tier 1 Basic')">Buy Now</button>
         </div>
         <div class="product">
@@ -78,7 +78,7 @@
         </div>
         <div class="product">
             <h2>$20 - Tier 3 Premium</h2>
-            <p>Includes everything: many games, The Underground, bypass methods, tutorials, and future content.</p>
+            <p>Includes everything: many games, The Underground access, bypass methods, tutorials, and future content.</p>
             <button class="btn" onclick="openForm('$20 - Tier 3 Premium')">Buy Now</button>
         </div>
     </div>
